crates/proto-convert/tests/snapshots/proto_conversion__json_responses_to_proto-5.snap
---
source: crates/connector-protocol/tests/proto_conversion.rs
expression: "parse_responses::<materialize::ValidateResponse>(vec![json!\n        ({\n            \"validated\" :\n            {\n                \"bindings\" :\n                [{\n                    \"resourcePath\" : [\"one\"], \"constraints\" :\n                    {\n                        \"field_required\" :\n                        { \"type\" : \"FieldRequired\", \"reason\" : \"doesn't fit\" }\n                    }, \"deltaUpdates\" : true\n                },\n                {\n                    \"resourcePath\" : [\"two\"], \"constraints\" :\n                    {\n                        \"loc_required\" :\n                        { \"type\" : \"LocationRequired\", \"reason\" : \"gaak\" }\n                    }, \"deltaUpdates\" : false\n                },\n                {\n                    \"resourcePath\" : [\"three\"], \"constraints\" :\n                    {\n                        \"loc_recommended\" :\n                        { \"type\" : \"LocationRecommended\", \"reason\" : \"cool\" }\n                    }, \"deltaUpdates\" : true\n                },\n                {\n                    \"resourcePath\" : [\"four\"], \"constraints\" :\n                    {\n                        \"field_optional\" :\n                        {\n                            \"type\" : \"FieldOptional\", \"reason\" :\n                            \"don't like the cut of it's jib\"\n                        }\n                    }, \"deltaUpdates\" : false\n                },\n                {\n                    \"resourcePath\" : [\"five\"], \"constraints\" :\n                    {\n                        \"field_forbidden\" :\n                        { \"type\" : \"FieldForbidden\", \"reason\" : \"bad bad\" }\n                    }, \"deltaUpdates\" : true\n                },\n                {\n                    \"resourcePath\" : [\"six\"], \"constraints\" :\n                    {\n                        \"super-bad\" :\n                        { \"type\" : \"Unsatisfiable\", \"reason\" : \"whoops\" }\n                    }, \"deltaUpdates\" : false\n                },]\n            }\n        })])"
---
[
    ValidateResponse {
        bindings: [
            Binding {
                constraints: {
                    "field_required": Constraint {
                        r#type: FieldRequired,
                        reason: "doesn't fit",
                    },
                },
                resource_path: [
                    "one",
                ],
                delta_updates: true,
            },
            Binding {
                constraints: {
                    "loc_required": Constraint {
                        r#type: LocationRequired,
                        reason: "gaak",
                    },
                },
                resource_path: [
                    "two",
                ],
                delta_updates: false,
            },
            Binding {
                constraints: {
                    "loc_recommended": Constraint {
                        r#type: LocationRecommended,
                        reason: "cool",
                    },
                },
                resource_path: [
                    "three",
                ],
                delta_updates: true,
            },
            Binding {
                constraints: {
                    "field_optional": Constraint {
                        r#type: FieldOptional,
                        reason: "don't like the cut of it's jib",
                    },
                },
                resource_path: [
                    "four",
                ],
                delta_updates: false,
            },
            Binding {
                constraints: {
                    "field_forbidden": Constraint {
                        r#type: FieldForbidden,
                        reason: "bad bad",
                    },
                },
                resource_path: [
                    "five",
                ],
                delta_updates: true,
            },
            Binding {
                constraints: {
                    "super-bad": Constraint {
                        r#type: Unsatisfiable,
                        reason: "whoops",
                    },
                },
                resource_path: [
                    "six",
                ],
                delta_updates: false,
            },
        ],
    },
]
