crates/proto-convert/tests/snapshots/proto_conversion__json_responses_to_proto-6.snap
---
source: crates/connector-protocol/tests/proto_conversion.rs
expression: "parse_responses::<capture::ApplyResponse>(vec![applied.clone()])"
---
[
    ApplyResponse {
        action_description: "something something",
    },
]
