crates/proto-convert/tests/snapshots/proto_conversion__json_responses_to_proto-8.snap
---
source: crates/connector-protocol/tests/proto_conversion.rs
expression: "parse_responses::<capture::PullResponse>(vec![json!\n        ({ \"opened\" : { \"explicitAcknowledgements\" : true } }), json!\n        ({ \"document\" : { \"binding\" : 1, \"doc\" : { \"p\" : 1 } } }), json!\n        ({ \"document\" : { \"binding\" : 1, \"doc\" : { \"p\" : 2 } } }), json!\n        ({ \"document\" : { \"binding\" : 1, \"doc\" : { \"p\" : 3 } } }), json!\n        ({ \"document\" : { \"binding\" : 2, \"doc\" : { \"p\" : 4 } } }), json!\n        ({\n            \"checkpoint\" :\n            {\n                \"driverCheckpoint\" : { \"check\" : \"point\" },\n                \"rfc7396MergePatch\" : true\n            }\n        }),])"
---
[
    PullResponse {
        opened: Some(
            Opened {
                explicit_acknowledgements: true,
            },
        ),
        documents: None,
        checkpoint: None,
    },
    PullResponse {
        opened: None,
        documents: Some(
            Documents {
                binding: 1,
                arena: [
                    123,
                    34,
                    112,
                    34,
                    58,
                    49,
                    125,
                    123,
                    34,
                    112,
                    34,
                    58,
                    50,
                    125,
                    123,
                    34,
                    112,
                    34,
                    58,
                    51,
                    125,
                ],
                docs_json: [
                    Slice {
                        begin: 0,
                        end: 7,
                    },
                    Slice {
                        begin: 7,
                        end: 14,
                    },
                    Slice {
                        begin: 14,
                        end: 21,
                    },
                ],
            },
        ),
        checkpoint: None,
    },
    PullResponse {
        opened: None,
        documents: Some(
            Documents {
                binding: 2,
                arena: [
                    123,
                    34,
                    112,
                    34,
                    58,
                    52,
                    125,
                ],
                docs_json: [
                    Slice {
                        begin: 0,
                        end: 7,
                    },
                ],
            },
        ),
        checkpoint: None,
    },
    PullResponse {
        opened: None,
        documents: None,
        checkpoint: Some(
            DriverCheckpoint {
                driver_checkpoint_json: [
                    123,
                    34,
                    99,
                    104,
                    101,
                    99,
                    107,
                    34,
                    58,
                    34,
                    112,
                    111,
                    105,
                    110,
                    116,
                    34,
                    125,
                ],
                rfc7396_merge_patch: true,
            },
        ),
    },
]
