crates/proto-convert/tests/snapshots/proto_conversion__json_responses_to_proto-9.snap
---
source: crates/connector-protocol/tests/proto_conversion.rs
expression: "parse_responses::<materialize::TransactionResponse>(vec![json!\n        ({ \"opened\" : { \"runtimeCheckpoint\" : \"aGVsbG8=\" } }), json!\n        ({ \"loaded\" : { \"binding\" : 1, \"doc\" : { \"p\" : 1 } } }), json!\n        ({ \"loaded\" : { \"binding\" : 1, \"doc\" : { \"p\" : 2 } } }), json!\n        ({ \"loaded\" : { \"binding\" : 1, \"doc\" : { \"p\" : 3 } } }), json!\n        ({ \"loaded\" : { \"binding\" : 2, \"doc\" : { \"p\" : 4 } } }), json!\n        ({ \"flushed\" : {} }), json!\n        ({\n            \"startedCommit\" :\n            {\n                \"driverCheckpoint\" : { \"check\" : \"point\" },\n                \"rfc7396MergePatch\" : true\n            }\n        }), json! ({ \"acknowledged\" : {} }),])"
---
[
    TransactionResponse {
        opened: Some(
            Opened {
                runtime_checkpoint: [
                    104,
                    101,
                    108,
                    108,
                    111,
                ],
            },
        ),
        loaded: None,
        flushed: None,
        started_commit: None,
        acknowledged: None,
    },
    TransactionResponse {
        opened: None,
        loaded: Some(
            Loaded {
                binding: 1,
                arena: [
                    123,
                    34,
                    112,
                    34,
                    58,
                    49,
                    125,
                    123,
                    34,
                    112,
                    34,
                    58,
                    50,
                    125,
                    123,
                    34,
                    112,
                    34,
                    58,
                    51,
                    125,
                ],
                docs_json: [
                    Slice {
                        begin: 0,
                        end: 7,
                    },
                    Slice {
                        begin: 7,
                        end: 14,
                    },
                    Slice {
                        begin: 14,
                        end: 21,
                    },
                ],
            },
        ),
        flushed: None,
        started_commit: None,
        acknowledged: None,
    },
    TransactionResponse {
        opened: None,
        loaded: Some(
            Loaded {
                binding: 2,
                arena: [
                    123,
                    34,
                    112,
                    34,
                    58,
                    52,
                    125,
                ],
                docs_json: [
                    Slice {
                        begin: 0,
                        end: 7,
                    },
                ],
            },
        ),
        flushed: None,
        started_commit: None,
        acknowledged: None,
    },
    TransactionResponse {
        opened: None,
        loaded: None,
        flushed: Some(
            Flushed,
        ),
        started_commit: None,
        acknowledged: None,
    },
    TransactionResponse {
        opened: None,
        loaded: None,
        flushed: None,
        started_commit: Some(
            StartedCommit {
                driver_checkpoint: Some(
                    DriverCheckpoint {
                        driver_checkpoint_json: [
                            123,
                            34,
                            99,
                            104,
                            101,
                            99,
                            107,
                            34,
                            58,
                            34,
                            112,
                            111,
                            105,
                            110,
                            116,
                            34,
                            125,
                        ],
                        rfc7396_merge_patch: true,
                    },
                ),
            },
        ),
        acknowledged: None,
    },
    TransactionResponse {
        opened: None,
        loaded: None,
        flushed: None,
        started_commit: None,
        acknowledged: Some(
            Acknowledged,
        ),
    },
]
