crates/proto-convert/tests/snapshots/proto_conversion__json_responses_to_proto.snap
---
source: crates/connector-protocol/tests/proto_conversion.rs
expression: "parse_responses::<capture::SpecResponse>(vec![spec.clone()])"
---
[
    SpecResponse {
        endpoint_spec_schema_json: "{\"$schema\":\"https://config-schema.example.com\",\"type\":\"object\"}",
        resource_spec_schema_json: "{\"$schema\":\"https://resource-schema.example.com\",\"type\":\"object\"}",
        documentation_url: "https://docs.example.com",
        oauth2_spec: Some(
            OAuth2Spec {
                provider: "facebook",
                auth_url_template: "https://www.facebook.com/v15.0/dialog/oauth?client_id={{#urlencode}}{{{ client_id }}}{{/urlencode}}&redirect_uri={{#urlencode}}{{{ redirect_uri }}}{{/urlencode}}&state={{#urlencode}}{{{  state }}}{{/urlencode}}&scope=ads_management,ads_read,read_insights,business_management",
                access_token_url_template: "https://graph.facebook.com/v15.0/oauth/access_token?client_id={{#urlencode}}{{{ client_id }}}{{/urlencode}}&client_secret={{#urlencode}}{{{ client_secret }}}{{/urlencode}}&code={{#urlencode}}{{{ code }}}{{/urlencode}}&redirect_uri={{#urlencode}}{{{ redirect_uri }}}{{/urlencode}}",
                access_token_method: "",
                access_token_body: "",
                access_token_headers_json: "{}",
                access_token_response_map_json: "{\"access_token\":\"/access_token\"}",
                refresh_token_url_template: "",
                refresh_token_method: "",
                refresh_token_body: "",
                refresh_token_headers_json: "{}",
                refresh_token_response_map_json: "{}",
            },
        ),
    },
]
